2013-03-04  Ulrich Müller  <ulm@gentoo.org>

	* elisp.eclass (elisp_src_install, elisp_pkg_postinst):
	Call readme.gentoo_create_doc and readme.gentoo_print_elog
	from readme.gentoo.eclass if these functions exist.

2013-02-26  Ulrich Müller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-compile, elisp-make-autoload-file)
	(elisp-install, elisp-site-file-install): Die on failure.
	* elisp.eclass (elisp_src_compile, elisp_src_install): Remove die
	commands that are no longer necessary because the called functions
	die themselves.

2012-12-12  Ulrich Müller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-need-emacs): Return 2 as exit status
	if the comparison could not be done, e.g., if emacs could not be
	executed in elisp-emacs-version.
	* elisp.eclass (elisp_pkg_setup): Distinguish between "version too
	low" and "could not determine version".

2012-09-11  Ulrich Müller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Remove last remnants of
	backwards compatibility code that was introduced at 2007-12-01.

2012-08-17  Ulrich Müller  <ulm@gentoo.org>

	* elisp.eclass (IUSE): Remove unnecessary variable assignment.

2012-02-11  Ulrich Müller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-need-emacs): Require GNU Emacs.

	* elisp-common.eclass (elisp-site-regen): Delete declaration of
	unused variable.

2011-12-03  Ulrich Müller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Use ebegin/eend instead
	of einfo.

2011-11-22  Ulrich Müller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Replace echo by einfo,
	so that the message will be properly logged.

	* elisp.eclass (ELISP_REMOVE): New variable.
	(elisp_src_prepare): Remove files specified in ELISP_REMOVE.

2011-10-17  Ulrich Müller  <ulm@gentoo.org>

	* elisp.eclass (elisp_src_prepare): Allow for user patches.

2011-10-01  Ulrich Müller  <ulm@gentoo.org>

	* elisp-common.eclass: Clarify policy on site-init files.

2011-08-22  Ulrich Müller  <ulm@gentoo.org>
