@@ -1,3 +1,9 @@
+2013-07-16  Mats Lidell  <matsl@gentoo.org>
+
+	* xemacs-packages.eclass (xemacs-packages_src_prepare,
+	xemacs-packages_src_configure): New functions that does
+	nothing. Needed for EAPI>2 support.
+
 2013-03-04  Ulrich Müller  <ulm@gentoo.org>
 
 	* elisp.eclass (elisp_src_install, elisp_pkg_postinst):
